# sotkalib

./: .gitignore  CHANGELOG.md  NOTICE  README.md  justfile  makefile  pyproject.toml  pyrefly.toml
.github/workflows/: publish.yml
.pytest_cache/v/cache/: lastfailed  nodeids
.ruff_cache/0.14.14/: 3055031083419397694  346820533858061593  6418109656529863711  7468755622169096153
.ruff_cache/0.14.9/: 745081557852107106
src/sotkalib/: __init__.py
src/sotkalib/config/: __init__.py  field.py  struct.py
src/sotkalib/configuration/: .test.py  __init__.py  field.py  struct.py
src/sotkalib/dict/: __init__.py  util.py
src/sotkalib/enum/: __init__.py  mixins.py
src/sotkalib/exceptions/: __init__.py  api.py  traceback.py
src/sotkalib/exceptions/api/: __init__.py  exc.py
src/sotkalib/exceptions/handlers/: __init__.py  args_incl_error.py  core.py
src/sotkalib/func/: __init__.py  concur.py  cond.py  defer.py  importutil.py
src/sotkalib/http/: __init__.py  client_session.py  context.py  models.py  types.py
src/sotkalib/json/: __init__.py  dump.py
src/sotkalib/log/: __init__.py  factory.py
src/sotkalib/logging/: __init__.py  factory.py
src/sotkalib/redis/: __init__.py  client.py  lock.py  locker.py  lru.py
src/sotkalib/redis/locker/: __init__.py
src/sotkalib/redis/lru/: __init__.py  abcs.py  cache.py  settings.py
src/sotkalib/serializer/: __init__.py
src/sotkalib/serializer/abc/: __init__.py
src/sotkalib/serializer/impl/: __init__.py  json.py  mixin.py  msgspec.py  orjson.py  ormsgpack.py  pickle.py  pydantic.py
src/sotkalib/sqla/: __init__.py  db.py  dbm.py  repo.py  type.py  validate.py
src/sotkalib/time/: __init__.py  dtfunc.py
src/sotkalib/type/: __init__.py  _checkers.py  _compat.py  _extr.py  generics.py  impl.py  unset.py
src/sotkalib/type/iface/: __init__.py  _checkers.py  _compat.py  _error.py  _extr.py  _impl.py  _proto_mixin.py
tests/: conftest.py  stress_test_safe_serialize.py  test_application_settings.py
tests/config/: test_settings.py
tests/dict/: test_dict.py
tests/enum/: test_mixins.py
tests/exceptions/: test_exc.py  test_handlers.py
tests/func/: test_concur.py  test_cond.py
tests/http/: test_client_session.py  test_models.py
tests/log/: test_factory.py
tests/redis/: test_client.py  test_lock.py  test_locker.py  test_lru.py
tests/sqla/: conftest.py  test_dbm.py  test_repo.py
tests/time/: test_time.py
tests/type/: test_compat.py  test_impl.py  test_type.py
