[project]
name = "sotkalib"
version = "0.1.2"
description = ""
authors = [
    { email = "me@pyrorhythm.dev", name = "alexey" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "pydantic>=2.12.0",
    "redis>=6.4.0,<8.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pyrefly>=0.45.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
    "testcontainers>=4.14.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
indent-style = "tab"

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "ASYNC",
    "S",
    "B",
    "A",
    "C4",
    "G",
    "PIE",
    "Q",
    "SIM",
    "ARG",
    "PTH",
    "TD",
    "PL",
    "PERF"
]
ignore = ["PERF401", "G004", "UP037"]

[tool.ruff.lint.isort]
known-first-party = [
    "common",
    "db",
    "libs",
    "handlers",
    "backend_common",
    "actions"
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.root_validator",
    "pydantic.validator",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/{tests}/*" = ["S101", "PLR2004"]
"**/{tests}/*/test_*" = ["ANN201"]

[tool.ruff.lint.pylint]
max-args = 9

[tool.pyrefly]
python_version = "3.14.0"

search-path = ["src"]
project-includes = ["src"]
project-excludes = ["**/.[!/.]*", "**/tests"]
site-package-path = [".venv/lib/python3.14/site-packages"]
python-interpreter-path = ".venv/bin/python"
untyped-def-behavior = "check-and-infer-return-any"
ignore-errors-in-generated-code = true
disable-search-path-heuristics = true

[tool.pyrefly.errors]
bad-assignment = false
invalid-argument = false
