[project]
name = "sotkalib"
version = "0.2.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "alexey", email = "me@pyrorhythm.dev" }]
dependencies = [
    "aiohttp>=3.13.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
redis = [
    "redis>=6.4.0,<8.0.0",
]
sqla = [
    "sqlalchemy[asyncio]>=2.0.0",
]
msgspec = [
    "msgspec>=0.20.0",
]
ormsgpack = [
    "ormsgpack>=1.12.0",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pyrefly>=0.50.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
    "testcontainers>=4.14.1",
    "yappi>=1.7.3",
    "sotkalib[redis,sqla,msgspec,ormsgpack]",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pyrefly]
python_version = "3.13.11"
search-path = ["src"]
project-includes = ["src"]
project-excludes = ["**/.[!/.]*", "**/tests"]
site-package-path = [".venv/lib/python3.13/site-packages"]
python-interpreter-path = ".venv/bin/python"
untyped-def-behavior = "check-and-infer-return-any"
ignore-errors-in-generated-code = true
disable-search-path-heuristics = true

[tool.pyrefly.errors]
bad-assignment = false
invalid-argument = false

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
indent-style = "tab"

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "ASYNC",
    "S",
    "B",
    "A",
    "C4",
    "G",
    "PIE",
    "Q",
    "SIM",
    "ARG",
    "PTH",
    "TD",
    "PL",
    "PERF"
]
ignore = ["PERF401", "G004", "UP037", "ASYNC109"]

[tool.ruff.lint.isort]
known-first-party = [
    "common",
    "db",
    "libs",
    "handlers",
    "backend_common",
    "actions"
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.root_validator",
    "pydantic.validator",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/{tests}/*" = ["S101", "PLR2004"]
"**/{tests}/*/test_*" = ["ANN201"]

[tool.ruff.lint.pylint]
max-args = 9

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
